# dsynth

./: .gitignore  AUTHORS  LICENSE  README.md  clean.sh  configure.ac
src/: Makefile.am  Makefile.in
